# kinship-ontology

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
doc/: V1D0-ConsistencyControl-StrategicFramework.md  V1D1-ConsistencyControl-GatesPipelineArchitecture.md  V1D2-ConsistencyControl-GatePipelinesAndPatternCatalogs.md  V1D2bis-ConsistencyControl-SHACLGate.md  V1D3-ConsistencyControl-OntologyDrivenQueryGeneration.md  V1D4-ConsistencyControl-ImplementationPaths.md  V1D4bis-ConsistencyControl-SHACLGateImplementation  V1D4bis-ConsistencyControl-SHACLGateImplementation.md  V1D5-ConsistencyControl-ImplementationFeedback.md  kinship-events.md  kinship-relationships-consistency.md  kinship-relationships.md
ontology/kinship/: allied-neutral.ttl  anchored-neutral.ttl  blended-neutral.ttl  consistency-foundation.ttl  core-neutral.ttl  extended-neutral.ttl  foundation.ttl  gender-foundation.ttl  gendered.ttl  kinship-consistency.ttl  kinship-events.ttl  kinship-shapes.ttl  kinship.ttl  lineage-foundation.ttl  materialization-foundation.ttl  shapes.ttl  social.ttl  temporal-foundation.ttl
src/kinship_pipeline/: __init__.py  cycle_detector.py  materialization_engine.py  pipeline.py  query_generator.py
tests/: spike_owlrl_expected.py  spike_owlrl_nothing.py  test-config.json  test_runner.py
tests/backends/: __init__.py  graphdb_backend.py  rdflib_backend.py
tests/data/: anchored-data.ttl  boundary-data.ttl  consistency-control-data.ttl  core-data.ttl  fats-only-data.ttl  fats-rejection-data.ttl  nma-data.ttl  oats-clean-data.ttl  (+4 more)
(+46 files in other folders)
